# series

./: .gitignore  .ocp-indent  Makefile  dune-project  series.opam  series.opam.template
.github/workflows/: static.yml
src/: dune
src/common/: api.ml  dune  rp.ml  test.ml  types.ml
src/js/: api.ml  dune  idb.ml  jsoo.ml  theme.ml  types.ml  ui.ml
src/unix/: dune  main.ml
www/: bootstrap.css  index.html  manifest.json  series.js
