(env
 (_ (env-vars
     ("PPX_ENCODING_MODULE" "")
     ("PPX_JSOO_FAKE" "true"))))

(library
 (name rp)
 (public_name series.rp)
 (modules rp)
 (libraries lwt))

(library
 (name types)
 (public_name series.types)
 (modules types)
 (preprocessor_deps (env_var "PPX_ENCODING_MODULE") (env_var "PPX_JSOO_FAKE"))
 (preprocess (pps ppx_deriving_encoding ppx_deriving_jsoo ppx_deriving_empty))
 (libraries hex calendar ez_api.encoding))

(library
 (name api)
 (public_name series.api)
 (modules api)
 (preprocess (pps ez_api.ppx_client))
 (libraries types ez_api.req_lwt rp str))

(executable
 (name test)
 (modules test)
 (preprocess (pps ppx_deriving_arg))
 (libraries api ez_api.icurl_lwt))
