(rule
 (deps ../common/types.ml)
 (targets jsoo.ml)
 (action (with-stdout-to %{targets} (run derive_jsoo %{deps}))))

(library
 (name jsoo)
 (modules jsoo)
 (libraries types)
 (modes byte))

(library
 (name idb)
 (modules idb)
 (preprocess (pps ppx_deriving_jsoo))
 (libraries jsoo ezjs_idb lwt)
 (modes byte))

(executable
 (name ui)
 (modules theme ui)
 (preprocess (pps ppx_deriving_jsoo))
 (libraries vue-jsoo idb api ez_api.ifetch_lwt)
 (modes js))
