(env (_ (flags (:standard -w -34))))

(rule
 (deps ../common/types.ml)
 (targets jsoo.ml)
 (action (with-stdout-to %{targets} (run derive_jsoo %{deps}))))

(library
 (name jsoo)
 (modules jsoo)
 (libraries types ez_api.encoding_js)
 (modes byte))

(library
 (name idb)
 (modules idb)
 (preprocess (pps ppx_deriving_jsoo))
 (libraries jsoo ezjs_idb ezjs_min.lwt)
 (modes byte))

(executable
 (name ui)
 (modules theme ui)
 (preprocess (pps ppx_deriving_jsoo vue-ppx))
 (libraries idb api ez_api.ifetch_lwt ezjs_push)
 (modes js))
